@@ -1,4 +1,7 @@
 2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/strconv.cxx:
+ - Remove half-baked optimization when converting non-number floats to strings.
+2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
  tools/lint:
  - Find all headers, including in subdirectories, but skip directories.
  - Make script fail on error.
